fix: layout shift of landing page on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -143,14 +143,14 @@ p {
   }
 
   .features {
-    @apply flex flex-col gap-8 px-4 sm:px-6 lg:px-8 py-12 sm:py-16 lg:py-30;
+    @apply flex flex-col lg:gap-8 px-4 sm:px-6 lg:px-8 py-12 sm:py-16 lg:py-30;
   }
 
   .guide {
-    @apply flex flex-col gap-8 px-4 sm:px-6 lg:px-8 py-12 sm:py-16 lg:py-20;
+    @apply flex flex-col  lg:gap-8 px-4 sm:px-6 lg:px-8 py-12 sm:py-16 lg:py-20;
   }
 
   .teamwork {
-    @apply flex flex-col lg:flex-row items-center gap-8 lg:gap-12 px-4 sm:px-6 lg:px-8 py-12 sm:py-16 lg:py-20;
+    @apply relative flex flex-col lg:flex-col lg:gap-8 px-4 sm:px-6 lg:px-8 py-12 sm:py-16 lg:py-20;
   }
 }
